# hessian

./: .cursorrules  .gitconfig  .gitignore  CLAUDE.md  COMPLETION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  hessian.bib  hessian.ipynb  hessian.md  hessian.py  hessian.tex  hessian_inverse.py  indentconfig.yaml  partitioned.py  plan.md  pyproject.toml  requirements.txt  simple_example.py  test_hessian.py  tex-fmt.toml  train_imagenet.py
.cursor/rules/: python-code-generation.mdc
experiments/: queue.md  results.md  summary-so-far.md
paper/: hessian.bib
reproduce-published-results/: plan.md  report.md
reproduce-published-results/phase-a-subsampled-newton/: A3_numerical_agreement.md  README.md  SECTION3_RESULT.md  a3_numerical_agreement.py  plot_trajectories.py  subsampled_newton.py  summarize.py
reproduce-published-results/phase-b-kfac-autoencoder/: .gitignore  README.md  data.py  model.py  parse_console_log.py  plot.py  train.py  train_asdl.py
reproduce-published-results/phase-c-hessian-free/: .gitignore  C1_README.md  C2_README.md  README.md
scripts/: document_block_partitioned_matrices_hierarchy.py  dump_hierarchy.py  plot_tr_solvers.py  plot_tr_vs_sgd.py  post-commit  pre-commit  test_demo_notebook.sh  update_readme_lines.py
src/: block_partitioned_matrices.py  demo_hessian.ipynb  hessian.py  monkeypatch.py  partitioned.py  requirements.txt  simple_example.py  test_basic.py  test_block_partitioned_matrices.py  test_hessian.py  test_partitioned.py  train_imagenet.py  train_newton.py  tutorial_block_partitioned_matrices.ipynb
(+187 files in other folders)
